--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         I am currently a <a target="_blank" href="https://www.raeng.org.uk/news/news-releases/2018/september/academy-awards-eight-new-research-fellowships"> Royal Academy of Engineering Research Fellow</a> in the <a target="_blank" href="https://www.surrey.ac.uk/centre-vision-speech-signal-processing">Centre for Vision, Speech and Signal Processing</a>, <a target="_blank" href="https://www.surrey.ac.uk/">University of Surrey</a> working in 4D Vision for perceptive machines. The emergence of machines that interact with their environment has led to an increasing demand for automatic visual understanding of real-world scenes. My research aims to better understand complex scenes so that machines can efficiently model and interpret real-world for a range of socially beneficial applications including autonomous systems, augmented reality and healthcare. 
                     </p>
                     <p>
-                        I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>, after which I became a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Research Fellow</a> at CVSSP, University of Surrey. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
+                        I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>, after which I became a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Research Fellow</a> at CVSSP, University of Surrey. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
                     </p>
                     <p>
                         <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.
@@ -165,6 +165,26 @@
 				<br/>
 				<h4><b><font size="+0">Publications</font></b></h4>
 				<!-- create table-responsive tables responsive to the xapuza made me do it -->
+				<h4>2018</h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/tip18/tip18.png" />
+							</a>
+						</td>
+						<td>
+							<a href="docs/tip18/ArminTIP2018.pdf">MSFD: Multi-scale segmentation based feature detection for wide-baseline scene reconstruction</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>,  Hansung Kim, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							to appear at <i>IEEE Transactions in Image Processing(TIP) 2018</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/tip18/ArminTIP2018.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4d/MSFD/">Project</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
 				<h4>2017</h4>
 				<table class="table-responsive">
 					<tr>
@@ -175,7 +195,7 @@
 						</td>
 						<td>
 							<a href="docs/3dv17/Armin3DV2017.pdf">4D Temporally Coherent Dynamic Light-field Video</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="http://marco.volino.co.uk/" target="_blank">Marco Volino</a>, <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a> and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							to appear at <i>3D Vision (3DV) 2017</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/Armin3DV2017.pdf">PDF</a>
@@ -198,7 +218,7 @@
 						</td>
 						<td>
 							<a href="docs/cvpr17/ArminCVPR2017.pdf">Semantically Coherent Co-segmentation and Reconstruction of Dynamic Scenes</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2017</i><br>
 							<!-- btn-group is to create groups of buttons. The size of the class brand btn-group in this case, it does not specify the specific button -->
 							<span class="btn-group btn-group-xs">
@@ -225,7 +245,7 @@
 						</td>
 						<td>
 							<a href="docs/cvpr16/ArminCVPR2016.pdf">Temporally Coherent 4D Reconstruction of Complex Dynamic Scenes (Oral)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a> and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminCVPR2016.pdf">PDF</a>
@@ -248,7 +268,7 @@
 						</td>
 						<td>
 							<a href="docs/eccv16/ArminECCV2016.pdf">4D Match Trees for Non-rigid Surface Alignment</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>The 14th European Conference on Computer Vision, ECCV 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/eccv16/ArminECCV2016.pdf">PDF</a>
@@ -273,7 +293,7 @@
 						</td>
 						<td>
 							<a href="docs/iccv15/ArminICCV2015.pdf">General Dynamic Scene Reconstruction from Multiple View Video</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a> and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>International Conference on Computer Vision (ICCV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/iccv15/ArminICCV2015.pdf">PDF</a>
@@ -297,7 +317,7 @@
 						</td>
 						<td>
 							<a href="docs/3dv15/Armin3DV2015.pdf">Segmentation based Features for Wide-baseline Multi-view Reconstruction (Oral)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>3D Vision (3DV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/3dv15/Armin3DV2015.pdf">PDF</a>
@@ -401,7 +421,7 @@
 						<td>
 							<b> Organised </b><br>
 							<a href="https://www.eventbrite.co.uk/e/bmva-technical-meeting-dynamic-scene-reconstruction-registration-29604512895"> One day BMVA symposium on Dynamic Scene Reconstruction </a> on 21st June 2017 , London <br>
-							Organisers: <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://marco.volino.co.uk/">Marco Volino</a><br>
+							Organisers: <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/symposium/ppt.pdf">PPT</a>
 							</span>
@@ -437,7 +457,7 @@
 						</td>
 						<td>
 							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Stereo </a>(Short paper)<br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
 							at <i>The 11th European Conference in Visual Media Production (CVMP) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvmp14/ArminCVMP2014.pdf">PDF</a>
@@ -516,7 +536,7 @@
 							<font size="+0.25">PhD: Jul' 2013 – Dec’ 2016</font> <br style="line-height: 8px" />
 							<b>Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
 							Thesis: <a href="docs/Thesis_ArminMustafa.pdf">General Dynamic 4D Scene Reconstruction from Multi-view Videos</a><br/> 
-							Advisor:  <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Prof. Adrian Hilton</a><br/>
+							Advisor:  <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a><br/>
 						</td>
 					</tr>
 				</table>
