--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 <!-- BIO TEXT -->
                 <div id="bio_text">
                     <p>
-                        I am currently a <a target="_blank" href="https://www.raeng.org.uk/news/news-releases/2018/september/academy-awards-eight-new-research-fellowships"> Royal Academy of Engineering Research Fellow</a> in the <a target="_blank" href="https://www.surrey.ac.uk/centre-vision-speech-signal-processing">Centre for Vision, Speech and Signal Processing</a>, <a target="_blank" href="https://www.surrey.ac.uk/">University of Surrey</a> working in 4D Vision for perceptive machines. The emergence of machines that interact with their environment has led to an increasing demand for automatic visual understanding of real-world scenes. My research aims to better understand complex scenes so that machines can efficiently model and interpret real-world for a range of socially beneficial applications including autonomous systems, augmented reality and healthcare. 
+                        I am a <a target="_blank" href="https://www.raeng.org.uk/news/news-releases/2018/september/academy-awards-eight-new-research-fellowships"> Royal Academy of Engineering Research Fellow</a> in the <a target="_blank" href="https://www.surrey.ac.uk/centre-vision-speech-signal-processing">Centre for Vision, Speech and Signal Processing</a>, <a target="_blank" href="https://www.surrey.ac.uk/">University of Surrey</a> working in 4D Vision for perceptive machines. The emergence of machines that interact with their environment has led to an increasing demand for automatic visual understanding of real-world scenes. My research aims to better understand complex scenes so that machines can efficiently model and interpret real-world for a range of socially beneficial applications including autonomous systems, augmented reality and healthcare. 
                     </p>
                     <p>
-                        I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>, after which I became a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Research Fellow</a> at CVSSP, University of Surrey. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
+                        I am currently a <a target="_blank" href="https://www.surrey.ac.uk/people/armin-mustafa"> Senior Research Fellow</a> at CVSSP, University of Surrey, where I finished PhD in 'General dynamic scene reconstruction from multi-view videos' in 2016, supervised by <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a>. I have previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I received M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> in Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.
                     </p>
                     <p>
                         <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.
@@ -124,6 +124,26 @@
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 				<h3><font size="+2" color="#000080">Research</font></h3>
 				<h4><b><font size="+0">Projects</font></b></h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/4D.png" />
+							</a>
+						</td>
+						<td>
+							4D Vision for Perceptive Machines<br>
+							<i>Royal Academy of Engineering funded project </i><br>
+							Aug 2018 - Jul 2023<br>
+							<!-- <span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="http://www.figmentproductions.co.uk/?portfolio=alive">Figment Productions</a>
+								<a class="btn btn-success" target="_blank" href="https://www.foundry.com/trends/research/alive-project">Foundry</a>
+								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
+							</span> -->
+						</td>
+					</tr>
+				</table>
+				<br/>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -494,7 +514,19 @@
 						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="55" height="55"/>
 						</td>
 						<td>
-							<font size="+0.25">Research Fellow: Oct' 2016 - Present</font> <br style="line-height: 8px" />
+							<font size="+0.25">Senior Research Fellow: Aug' 2018 - Present</font> <br style="line-height: 8px" />
+							<b>Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="55" height="55"/>
+						</td>
+						<td>
+							<font size="+0.25">Research Fellow: Oct' 2016 - Jul' 2018</font> <br style="line-height: 8px" />
 							<b>Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
 						</td>
 					</tr>
