--- a/index.html
+++ b/index.html
@@ -191,6 +191,26 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/iccv19/iccv19.png" />
+							</a>
+						</td>
+						<td>
+							<a href="docs/iccv19/ArminICCV2019.pdf">U4D: Unsupervised 4D Dynamic Scene Understanding</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.turing.ac.uk/people/researchers/chris-russell">Chris Russell</a>, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							at <i>International Conference on Computer Vision (ICCV) 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/iccv19/ArminICCV2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=mA60vkLXBJ0&t=30s">Video</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.09905">Arxiv</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/tip18/tip18.png" />
 							</a>
 						</td>
@@ -510,6 +530,24 @@
 				<br/>				
 				<h4><b><font size="+1">Talks</font></b></h4>
 				<table class="table-responsive">
+				    <tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/hlc.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp Understanding real-world scenes for human-like machine perception, 03 July 2019 </b></font> <br/>
+							&nbsp at EPSRC Network+ Human-Like Computing Machine Intelligence Workshop (MI21-HLC), Windsor, UK <br/> <br/>
+						</td>
+					</tr>
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/astar.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp 4D Vision for Dynamic Scene Understanding, 24 May 2019 </b></font> <br/>
+							&nbsp at Agency for Science, Technology and Research (A*STAR), Singapore <br/> <br/>
+						</td>
+					</tr>
 					<tr>
 						<td>
 						<img class="img-rounded" src="docs/misc/aslla.png" alt="" width="40" height="40"/>
@@ -658,15 +696,27 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
+							<img class="img-rounded" src="docs/files/oxfor.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<font size="+0.25">&nbsp Oxford Artificial Intelligence Programme: May' 2019 – Jul’ 2019</font> <br style="line-height: 8px" />
+							<b>&nbsp Said Business School, University of Oxford, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
 							<a href="docs/Thesis_ArminMustafa.pdf">
 								<img class="img-rounded" src="docs/files/surrey.png" alt="" width="40" height="40"/>
 							</a>
 						</td>
 						<td>
-							<font size="+0.25">PhD: Jul' 2013 – Dec’ 2016</font> <br style="line-height: 8px" />
-							<b>Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
-							Thesis: <a href="docs/Thesis_ArminMustafa.pdf">General Dynamic 4D Scene Reconstruction from Multi-view Videos</a><br/> 
-							Advisor:  <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a><br/>
+							<font size="+0.25">&nbsp PhD: Jul' 2013 – Dec’ 2016</font> <br style="line-height: 8px" />
+							<b>&nbsp Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
+							&nbsp Thesis: <a href="docs/Thesis_ArminMustafa.pdf">General Dynamic 4D Scene Reconstruction from Multi-view Videos</a><br/> 
+							&nbsp Advisor:  <a href="https://www.surrey.ac.uk/people/adrian-hilton">Prof. Adrian Hilton</a><br/>
 						</td>
 					</tr>
 				</table>
@@ -679,10 +729,10 @@
 							</a>
 						</td>
 						<td>
-							<font size="+0.25">M.Tech: Aug’ 2008 – June’ 2010</font> <br style="line-height: 8px" />
-							<b>Computer vision lab, Indian Institute of Technology, Kanpur, India</b><br/>
-							Thesis: <a href="docs/masters/thesis.pdf"> Finger Gesture Recognition in Dynamic Environment under Varying Illumination upon Arbitrary Background </a><br/>
-							Advisor:  <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a><br/>
+							<font size="+0.25">&nbsp M.Tech: Aug’ 2008 – June’ 2010</font> <br style="line-height: 8px" />
+							<b>&nbsp Computer vision lab, Indian Institute of Technology, Kanpur, India</b><br/>
+							&nbsp Thesis: <a href="docs/masters/thesis.pdf"> Finger Gesture Recognition in Dynamic Environment under Varying Illumination</a><br/>
+							&nbsp Advisor:  <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a><br/>
 						</td>
 					</tr>
 				</table>
@@ -695,8 +745,8 @@
 							</a>
 						</td>
 						<td>
-							<font size="+0.25">B.E.: Aug’ 2004 – May’ 2008</font> <br style="line-height: 8px" />
-							<b>Institute of Engineering and Technology, Indore, India</b><br/>
+							<font size="+0.25">&nbsp B.E.: Aug’ 2004 – May’ 2008</font> <br style="line-height: 8px" />
+							<b>&nbsp Institute of Engineering and Technology, Indore, India</b><br/>
 						</td>
 					</tr>
 				</table>
