--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
 				<div class="video-wrapper">
-					<iframe src="https://www.youtube.com/embed/obnDpiDnScI?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+					<iframe src="https://www.youtube.com/embed/mA60vkLXBJ0?&autoplay=1;&loop=1" frameborder="25" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 				<div class="video-wrapper">
-					<iframe src="https://www.youtube.com/embed/bm_P13_-DsQ?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+					<iframe src="https://www.youtube.com/embed/FFVTIY47NQ8?&autoplay=1;&loop=1" frameborder="25" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 				<div class="video-wrapper">
-					<iframe src="https://www.youtube.com/embed/GPu-UKppCfk?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+					<iframe src="https://www.youtube.com/embed/obnDpiDnScI?&autoplay=1;&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 				</div></div></p>
 				<!-- This is added to display videos in a row // Remove &autoplay=1&loop=1 to remove autoplay from the videos-- end -->
 				<!-- horitzontal bar -->
@@ -202,6 +202,26 @@
 								<a class="btn btn-success" target="_blank" href="docs/iccv19/ArminICCV2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=mA60vkLXBJ0&t=30s">Video</a>
 								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.09905">Arxiv</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/cvpr16/ijcv19.png" />
+							</a>
+						</td>
+						<td>
+							<a href="docs/cvpr16/ArminIJCV2019.pdf">Temporally Coherent General Dynamic Scene Reconstruction</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							under review at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Arxiv</a>
 							</span>
 						</td>
 					</tr>
@@ -530,6 +550,15 @@
 				<br/>				
 				<h4><b><font size="+1">Talks</font></b></h4>
 				<table class="table-responsive">
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/bmvalogo.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp Semantically Coherent 4D Scene Flow of Dynamic Scenes, 19 July 2019 </b></font> <br/>
+							&nbsp at BMVA Meeting on Geometry and Deep Learning, London, UK <br/> <br/>
+						</td>
+					</tr>
 				    <tr>
 						<td>
 						<img class="img-rounded" src="docs/misc/hlc.png" alt="" width="40" height="40"/>
@@ -608,7 +637,7 @@
 						</td>
 						<td>
 							<b> &nbsp Semantic Scene Reconstruction, 21 June 2017 </b></font> <br/>
-							&nbsp at BMVA Meeting on Dynamic Scene Reconstruction, by BMVA London, UK<br/> <br/>
+							&nbsp at BMVA Meeting on Dynamic Scene Reconstruction, London, UK<br/> <br/>
 						</td>
 					</tr>
 					<tr>
@@ -640,6 +669,18 @@
 						<td>
 							<font size="+0.25"> &nbsp Royal Academy of Engineering Research Fellow: Aug' 2018 - Present</font> <br style="line-height: 8px" />
 							<b> &nbsp Centre for Vision, Speech and Signal Processing, University of Surrey, UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/astar.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<font size="+0.25"> &nbsp Visiting Researcher: May' 2019</font> <br style="line-height: 8px" />
+							<b> &nbsp Agency for Science, Technology and Research (A*STAR), Singapore </b><br/>
 						</td>
 					</tr>
 				</table>
