--- a/index.html
+++ b/index.html
@@ -231,6 +231,26 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/hlc19/HLC_AI.png" />
+							</a>
+						</td>
+						<td>
+							<a href="docs/hlc19/ArminHLC2019.pdf">Understanding real-world scenes for human-like machine perception</a><br>
+							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							at <i><a href="http://mi21-hlc.doc.ic.ac.uk">Human Like Computing Machine-Intelligence Workshop 2019 (MI21-HLC)</a></i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="docs/hlc19/poster.pdf">Poster</a>
+								<a class="btn btn-success" target="_blank" href="docs/hlc19/presentation.pdf">PPT</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/tip18/tip18.png" />
 							</a>
 						</td>
