added new paper

--- a/index.html
+++ b/index.html
@@ -228,6 +228,26 @@
 					</tr>
 				</table>
 				<br/>
+				
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/3dv19.png" />
+							</a>
+						</td>
+						<td>
+							<a href="docs/files/volino_3dv2019.pdf">Light Field Compression using Eigen Textures</a><br>
+							<a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							at <i>3D Vision (3DV) 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://cvssp.org/projects/lightfields/light-field-compression-using-eigen-textures/">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				
 				<table class="table-responsive">
 					<tr>
 						<td>
